Fix DOCZ/Babel Error: Duplicate plugin/preset detected. due to overlapping configuraiton in babel.config.js

--- a/docs/links-to-documentation.mdx
+++ b/docs/links-to-documentation.mdx
@@ -54,3 +54,13 @@ Jump start JS:
 VS Code
 
 - https://medium.freecodecamp.org/immensely-upgrade-your-development-environment-with-these-visual-studio-code-extensions-9cd790478530
+
+## Docz
+
+https://github.com/pedronauck/docz
+
+## MobX
+
+### MobX Delorean (Time travel debugging)
+
+- https://github.com/BrascoJS/delorean
